fix css misaligned position

--- a/WEB Project/css/style.css
+++ b/WEB Project/css/style.css
@@ -157,14 +157,13 @@ body{
 }
 
 .shopping-cart .cart-item {
-    margin: 1.1rem 0;
+    margin: 1rem 0;
     display: flex;
     align-items: center;
-    gap: 1.5rem;
+    gap: 2rem;
     padding-bottom: 1rem;
     border-bottom: 1px dashed #666;
     position: relative;
-    
 }
 
 .shopping-cart img {
@@ -204,7 +203,7 @@ body{
 
 .shopping-cart h4 {
     font-size: 1.5rem;
-    margin-top: -1rem;
+    margin-top: -0.3rem;
     text-align: center;
 }
 
@@ -592,13 +591,15 @@ footer .credit a{
 
 .modal-container {
     position: relative;
-    background-color: #fefefe;
+    background-color: rgba(254, 254, 254, 0.7);
     color: var(--bg);
     margin: 15% auto;
     padding: 1.2rem;
     border: 1px solid #666;
     width: 80%;
     animation: animateModal 0.5s;
+    border-radius: 3rem;
+    
 }
 
 /* Modal Animation */
@@ -616,7 +617,8 @@ footer .credit a{
 
 .modal-container .close-icon {
     position: absolute;
-    right: 1rem;
+    right: 1.5rem;
+    height: 1rem;
 }
 
 .modal-content {
@@ -629,6 +631,7 @@ footer .credit a{
     height: 15rem;
     margin-right: 2rem;
     margin-bottom: 2rem;
+    border-radius: 3rem;
 }
 
 .modal-content p {
@@ -748,6 +751,22 @@ footer .credit a{
     flex-wrap: wrap;
 }
 
+.modal-content span {
+    display: flex;
+    align-items: center;
+    text-align: center;
+}
+
+.product-content h3{
+    font-size: 1.5rem;
+}
+
+.modal-container {
+    width: 95%; 
+    max-width: 350px; 
+    max-height: 45vh;
+}
+
 .shopping-cart .cart-item {
     margin: 1.5rem 0;
     display: flex;
@@ -755,7 +774,6 @@ footer .credit a{
     gap: 1.5rem;
     padding-bottom: 5rem;
     position: relative;
-    
 }
 
 .shopping-cart img {
@@ -770,7 +788,6 @@ footer .credit a{
 .shopping-cart .item-price {
     font-size: 1.5rem;
 }
-
 
 
 .form-container h5 {
@@ -802,7 +819,7 @@ footer .credit a{
 }
 
 .form-container .checkout-button {
-    padding: 6px 14px;
+    padding: 4px 14px;
     background-color: royalblue;
     color: white;
     font-weight: bold;
